java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testImplementAbstractMethodsHint3.pass
/*
 * ImplementAbstractMethod1.java
 *
 * Created on March 12, 2005, 7:22 PM
 */

package org.netbeans.test.java.hints;

import java.io.IOException;
import javax.swing.text.BadLocationException;

/**
 *
 * @author lahvac
 */
public class ImplementAbstractMethods3 {
    
    /** Creates a new instance of ImplementAbstractMethod1 */
    public ImplementAbstractMethods3() {
        new AbstractClass() {

            public void test(int x, String y, String... args) throws IOException, BadLocationException {
            }
        };
    }
    
}
